// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Renderer list mode renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
○ Preflight
○ Publish:core
○ Publish:flo
○ CreateTag
○ PushTags

0/5 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer list mode renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
● Preflight
○ Publish:core
○ Publish:flo
○ CreateTag
○ PushTags

0/5 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer list mode renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
✓ Preflight
● Publish:core
○ Publish:flo
○ CreateTag
○ PushTags

1/5 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer list mode renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 4`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
✓ Preflight
✓ Publish:core
✓ Publish:flo
✓ CreateTag
✓ PushTags

5/5 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer list mode renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 5`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
✓ Preflight
✗ Publish:core
○ Publish:flo
○ CreateTag
○ PushTags

1/5 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer list mode renderList({ activities: [ 'Step1', 'Step2', 'Step3' ], colors: true, events: [ Started { a...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
\x1B[32m✓\x1B[39m Step1
\x1B[33m●\x1B[39m Step2
\x1B[90m○\x1B[39m Step3

\x1B[2m1/3 completed (0)\x1B[22m
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer DAG mode compact renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ○ Preflight
Layer 1:
○ Publish:A
○ Publish:B
Layer 2: ○ CreateTag

0/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer DAG mode compact renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ● Preflight
Layer 1:
○ Publish:A
○ Publish:B
Layer 2: ○ CreateTag

0/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer DAG mode compact renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ✓ Preflight
Layer 1:
● Publish:A
● Publish:B
Layer 2: ○ CreateTag

1/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer DAG mode compact renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 4`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ✓ Preflight
Layer 1:
✓ Publish:A
✓ Publish:B
Layer 2: ✓ CreateTag

4/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer DAG mode compact renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 5`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ✓ Preflight
Layer 1:
✓ Publish:A
✗ Publish:B
Layer 2: ○ CreateTag

2/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer DAG mode compact renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 6`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
\x1B[1m\x1B[36mWorkflow Progress\x1B[39m\x1B[22m

\x1B[2mLayer 0:\x1B[22m \x1B[32m✓ Preflight\x1B[39m
\x1B[2mLayer 1:\x1B[22m
\x1B[33m● Publish:A\x1B[39m
\x1B[90m○ Publish:B\x1B[39m
\x1B[2mLayer 2:\x1B[22m \x1B[90m○ CreateTag\x1B[39m

\x1B[2m1/4 completed (0)\x1B[22m
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer DAG mode full renderDagFull({ layers: [ [ 'StepA' ], [ 'StepB', 'StepC' ], [ 'StepD' ] ], edges: [ [ 'StepA'...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING



┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│





┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│○  StepC   │
└──────────┘

──→







┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│○  StepC   │
└──────────┘

──→







┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│○  StepC   │
└──────────┘

──→





0/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer DAG mode full renderDagFull({ layers: [ [ 'StepA' ], [ 'StepB', 'StepC' ], [ 'StepD' ] ], edges: [ [ 'StepA'...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING



┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│





┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│●  StepC   │
└──────────┘

──→







┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│●  StepC   │
└──────────┘

──→







┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│●  StepC   │
└──────────┘

──→





1/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer DAG mode full renderDagFull({ layers: [ [ 'StepA' ], [ 'StepB', 'StepC' ], [ 'StepD' ] ], edges: [ [ 'StepA'...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING



\x1B[32m┌──────────┐\x1B[39m
\x1B[32m│\x1B[39m✓  StepA   \x1B[32m│\x1B[39m
\x1B[32m└──────────┘\x1B[39m

──→

\x1B[33m┌──────────┐\x1B[39m
\x1B[33m│\x1B[39m●  StepB   \x1B[33m│\x1B[39m
\x1B[33m└──────────┘\x1B[39m

──→

\x1B[90m┌──────────┐\x1B[39m
\x1B[90m│\x1B[39m○  StepD   \x1B[90m│\x1B[39m
\x1B[90m└──────────┘\x1B[39m



\x1B[32m┌──────────┐\x1B[39m
\x1B[32m│\x1B[39m✓  StepA   \x1B[32m│\x1B[39m
\x1B[32m└──────────┘\x1B[39m

──→

\x1B[33m┌──────────┐\x1B[39m
\x1B[33m│\x1B[39m●  StepB   \x1B[33m│\x1B[39m
\x1B[33m└──────────┘\x1B[39m

──→

\x1B[90m┌──────────┐\x1B[39m
\x1B[90m│\x1B[39m○  StepD   \x1B[90m│\x1B[39m
\x1B[90m└──────────┘\x1B[39m



\x1B[32m┌──────────┐\x1B[39m
\x1B[32m│\x1B[39m✓  StepA   \x1B[32m│\x1B[39m
\x1B[32m└──────────┘\x1B[39m

──→

\x1B[33m┌──────────┐\x1B[39m
\x1B[33m│\x1B[39m●  StepB   \x1B[33m│\x1B[39m
\x1B[33m└──────────┘\x1B[39m

──→

\x1B[90m┌──────────┐\x1B[39m
\x1B[90m│\x1B[39m○  StepD   \x1B[90m│\x1B[39m
\x1B[90m└──────────┘\x1B[39m



\x1B[32m┌──────────┐\x1B[39m
\x1B[32m│\x1B[39m✓  StepA   \x1B[32m│\x1B[39m
\x1B[32m└──────────┘\x1B[39m

──→

\x1B[33m┌──────────┐\x1B[39m
\x1B[33m│\x1B[39m●  StepB   \x1B[33m│\x1B[39m
\x1B[33m└──────────┘\x1B[39m

──→

\x1B[90m┌──────────┐\x1B[39m
\x1B[90m│\x1B[39m○  StepD   \x1B[90m│\x1B[39m
\x1B[90m└──────────┘\x1B[39m

│

│





\x1B[32m┌──────────┐\x1B[39m
\x1B[32m│\x1B[39m✓  StepA   \x1B[32m│\x1B[39m
\x1B[32m└──────────┘\x1B[39m

──→

\x1B[33m┌──────────┐\x1B[39m
\x1B[33m│\x1B[39m●  StepB   \x1B[33m│\x1B[39m
\x1B[33m└──────────┘\x1B[39m

──→

\x1B[90m┌──────────┐\x1B[39m
\x1B[90m│\x1B[39m○  StepD   \x1B[90m│\x1B[39m
\x1B[90m└──────────┘\x1B[39m

│

│











\x1B[90m┌──────────┐\x1B[39m
\x1B[90m│\x1B[39m○  StepC   \x1B[90m│\x1B[39m
\x1B[90m└──────────┘\x1B[39m

──→







\x1B[32m┌──────────┐\x1B[39m
\x1B[32m│\x1B[39m✓  StepA   \x1B[32m│\x1B[39m
\x1B[32m└──────────┘\x1B[39m

──→

\x1B[33m┌──────────┐\x1B[39m
\x1B[33m│\x1B[39m●  StepB   \x1B[33m│\x1B[39m
\x1B[33m└──────────┘\x1B[39m

──→

\x1B[90m┌──────────┐\x1B[39m
\x1B[90m│\x1B[39m○  StepD   \x1B[90m│\x1B[39m
\x1B[90m└──────────┘\x1B[39m

│

│











\x1B[90m┌──────────┐\x1B[39m
\x1B[90m│\x1B[39m○  StepC   \x1B[90m│\x1B[39m
\x1B[90m└──────────┘\x1B[39m

──→







\x1B[32m┌──────────┐\x1B[39m
\x1B[32m│\x1B[39m✓  StepA   \x1B[32m│\x1B[39m
\x1B[32m└──────────┘\x1B[39m

──→

\x1B[33m┌──────────┐\x1B[39m
\x1B[33m│\x1B[39m●  StepB   \x1B[33m│\x1B[39m
\x1B[33m└──────────┘\x1B[39m

──→

\x1B[90m┌──────────┐\x1B[39m
\x1B[90m│\x1B[39m○  StepD   \x1B[90m│\x1B[39m
\x1B[90m└──────────┘\x1B[39m

│

│











\x1B[90m┌──────────┐\x1B[39m
\x1B[90m│\x1B[39m○  StepC   \x1B[90m│\x1B[39m
\x1B[90m└──────────┘\x1B[39m

──→





\x1B[2m1/4 completed (0)\x1B[22m
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer complex DAG renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:@kitz/core', 'Publish:@kitz/flo', 'Publi...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ○ Preflight
Layer 1:
○ Publish:@kitz/core
○ Publish:@kitz/flo
○ Publish:@kitz/syn
Layer 2: ○ CreateTag
Layer 3: ○ PushTags

0/6 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer complex DAG renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:@kitz/core', 'Publish:@kitz/flo', 'Publi...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ✓ Preflight
Layer 1:
✓ Publish:@kitz/core
● Publish:@kitz/flo
● Publish:@kitz/syn
Layer 2: ○ CreateTag
Layer 3: ○ PushTags

2/6 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer complex DAG full renderDagFull({ layers: [ [ 'Preflight' ], [ 'Publish:@kitz/core', 'Publish:@kitz/flo', 'Publi...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING



┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│







┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















│







┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















│













┌────────────────────┐
│○ Publish:@kitz/syn  │
└────────────────────┘















┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















│













┌────────────────────┐
│○ Publish:@kitz/syn  │
└────────────────────┘















┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















│













┌────────────────────┐
│○ Publish:@kitz/syn  │
└────────────────────┘













0/6 completed (0)
╚══════════════════════════════════════════════════╝"
`;
